[package]
name = "tjbot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
ndarray = "0.16.1"
pgvector = { version = "0.4.1", features = ["sqlx"] }
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
secrecy = "0.10.3"
tokio = { version = "1.47.1", features = ["full"] }
